--- a/shelflibrary/catalog/templates/base_generic.html
+++ b/shelflibrary/catalog/templates/base_generic.html
@@ -20,8 +20,8 @@
                 <div class="col-sm-2"></div>
                 {% block sidebar %}
                 <ul class="sidebar-nav">
-                    <li><a href="{url 'index'}">Home</a></li>
-                    <li><a href="">All books</a></li>
+                    <li><a href="{% url 'index' %}">Home</a></li>
+                    <li><a href="{% url 'books' %}">All books</a></li>
                     <li><a href="">All authors</a></li>
                 </ul>
                 {% endblock %}
