--- a/shelflibrary/catalog/templates/book_list.html
+++ b/shelflibrary/catalog/templates/book_list.html
@@ -4,7 +4,7 @@
     <h1>Book List</h1>
     {% if book_list %}
         <ul>
-            {% for book in book_list}
+            {% for book in book_list %}
             <li>
                 <a href="{{book.get_absolute_url}}">{{book.title}}</a>
                 ({{book.author}})
