--- a/shelflibrary/catalog/templates/base_generic.html
+++ b/shelflibrary/catalog/templates/base_generic.html
@@ -23,17 +23,19 @@
                     <li><a href="{% url 'index' %}">Home</a></li>
                     <li><a href="{% url 'books' %}">All books</a></li>
                     <li><a href="{% url 'authors' %}">All authors</a></li>
-                </ul>
-                {% if user.is_authenticated %}
+                    {% if user.is_authenticated %}
                     <li>User: {{user.get_username}}</li>
+                        <li><a href = "{% url 'my-borrowed' %}"></a>My Borrowed</li>
                         <li>
                             <form id="logout-form" method="post" action="{% url 'admin:logout' %}">
-                            {% crsf_token %}
+                            {% csrf_token %}
                             <button type="submit" class="btn btn-link">Logout</button>
                             </form>
                         </li>
                 {% else %}
                 <li><a href="{% url 'login' %}?next = {{request.path}}">Login</a></li>
+                </ul>
+                {% endif %}
                 {% endblock %}
             </div>
             <div class="col-sm-10">{% block content%}{% endblock %}</div>
